# stage2

./: .gitignore  README.md  requirements.txt
agnews_classification/: README.md  task2_utils.py
mini_transformers/: README.md  pyproject.toml  requirements.txt
mini_transformers/configs/: bert_base.yaml  gpt2_small.yaml  lm_gpt2.yaml  mt_transformer.yaml  sentiment_bert.yaml  xlnet_base.yaml
mini_transformers/docs/: architecture.md  data_pipeline.md  learning_rate_scheduler.md  reproduction_notes.md  training_debug.md
mini_transformers/examples/language_modeling/: README.md  tiny_corpus.txt  train_bert_pretraining.py  train_gpt2_lm.py  train_xlnet_lm.py
mini_transformers/examples/machine_translation/: README.md  tiny_en_de.tsv  train_transformer_mt.py
mini_transformers/examples/sentiment_analysis/: README.md  tiny_sentiment.tsv  train_bert_classifier.py
mini_transformers/scripts/: evaluate.py  export_checkpoint.py  predict.py  prepare_dataset.py  train.py
mini_transformers/src/mini_transformers/: __init__.py
mini_transformers/src/mini_transformers/configs/: __init__.py  bert_config.py  configuration_utils.py  gpt2_config.py  mt_config.py  xlnet_config.py
mini_transformers/src/mini_transformers/metrics/: __init__.py  accuracy.py  bleu.py  f1.py  metric_utils.py  perplexity.py
mini_transformers/src/mini_transformers/models/: __init__.py  auto.py  modeling_utils.py
mini_transformers/tests/: test_attention.py  test_datasets.py  test_losses.py  test_metrics.py  test_models.py  test_registries.py  test_tokenizers.py  test_train_dispatch.py  test_trainer.py
(+182 files in other folders)
