[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-transformers-nlp-lab"
version = "0.1.0"
description = "A PyTorch mini NLP framework for transformer model reproduction."
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "numpy>=1.24",
  "tqdm>=4.66",
  "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
